@startuml

title US008

/'
As a Power User [or Administrator], I want to deactivate a device, so that it is no
longer used. Nevertheless, it should be possible to access its configuration and
activity log.
'/

class House {
  + getRoomByName(...) : Room
  + getRooms() : List<Room>
}

class Room {
  - name : String
  + Room(...)
  + getRoomName() : String
  + getDevicesInRoom() : List<Device>
  + getDeviceByName() : Device
}

class Device {
  - name : String
  - active : boolean
  + Device(...)
  + getName() : String
  + deactivate() : boolean
}

class DeactivateDeviceController {
    - house : House
    + DeactivateDeviceController(...)
    + getRooms() : List<RoomDTO>
    + getDevices(...) : List<DeviceDTO>
    + deactivateDevice(...) : boolean
}

class GetRoomListController {
    - house : House
    + GetRoomListController()
    + getRooms() : List<RoomDTO>
}

class GetDeviceListController {
    - house : House
    + GetDeviceListController()
    + getDevicesInRoom(...) : List<DeviceDTO>
}

note bottom of GetRoomListController : ref : GetRoomListController\nfor more details
note bottom of GetDeviceListController : ref : GetDeviceListController\nfor more details

DeactivateDeviceController "1" .l> "1" GetRoomListController : uses

DeactivateDeviceController "1" .> "1" GetDeviceListController : uses

DeactivateDeviceController "1" -.> "1" House : uses
House "1" --> "List<Room>" Room : contains
Room "1" --> "List<Device>" Device : contains
@enduml